# Copilot_Using_RAG

./: .gitignore  .venv  Copilot_Implementation_Plan.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start.ps1  start.sh
.github/workflows/: ci.yml
scripts/: build_index.py
src/copilot/: __init__.py  branding.py  config.py  logging_setup.py  schemas.py
src/copilot/analytics/: db.py  metrics.py  reporting.py
src/copilot/core/: bm25.py  cache.py  escalation.py  generation.py  guards.py  intent.py  pipeline.py  prompt.py  retriever.py  router.py
src/copilot/feedback/: store.py
src/copilot/indexing/: embedder.py  index_builder.py  vector_store.py
src/copilot/ingestion/: chunker.py  loaders.py
src/copilot/serving/: api.py  deps.py  security.py
src/copilot/serving/ui/: app.py  chat_app.py  dashboard.py  upload.py
tests/: conftest.py  test_api.py  test_cache.py  test_chunker.py  test_escalation.py  test_guards.py  test_intent.py  test_pipeline.py  test_retrieval.py  test_route.py
tests/fixtures/mock_kb/: export_data.md  password_reset.md  refund_policy.md
